Fixes retrato.ph alignment in homepage

--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -117,7 +117,7 @@
   }
 
   .home__item--retrato & {
-    transform: translateX(9.8rem);
+    transform: translateX(-6.7rem);
   }
 
   .home__item--venatus & {
